feat: break accessibility some more

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <body aria-hidden="true">
     <header>
       <a href=".">
-        <img src="cdd005ac7e164cf9940d9ba62c59700c.png" alt="" />
+        <img src="public/cdd005ac7e164cf9940d9ba62c59700c.png" alt="" />
       </a>
       <div id="navigation">
         <ul>
@@ -25,7 +25,7 @@
             <a href="." aria-label="home"> Accueil </a>
           </li>
           <li>
-            <a href="./contact.html" class="current" aria-label="content">
+            <a href="./contact.html" aria-label="current" tabindex="2">
               Contact
             </a>
           </li>
