--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body aria-label="body">
     <header>
       <a href=".">
-        <img src="cdd005ac7e164cf9940d9ba62c59700c.png" alt="logo" />
+        <img src="public/cdd005ac7e164cf9940d9ba62c59700c.png" alt="logo" />
       </a>
       <div id="navigation">
         <ul>
           <li>
-            <a href="." class="current"> Accueil </a>
+            <a href="." aria-label="current"> Accueil </a>
           </li>
           <li>
             <a href="./contact.html" tabindex="2"> Contact </a>
-
           </li>
         </ul>
       </div>
@@ -40,18 +39,17 @@
           src="https://thumbs.dreamstime.com/z/photographe-professionnel-12462630.jpg"
           alt="Jean Do prend en photo l'objectif"
           id="my-photo"
-          
         />
       </div>
 
       <div class="section" role="main">
-        <h3>Ce que je fais</h3>
+        <h3 aria-label="what i do">Ce que je fais</h3>
 
-        <img src="Screenshot from 2022-05-11 17-00-03.png" alt="description">
+        <img src="public/Screenshot from 2022-05-11 17-00-03.png" alt="description">
       </div class="section">
 
       <div class="section">
-        <h2>Mes oeuvres</h2>
+        <h1>Mes oeuvres</h1>
 
         <div id="img-gallery">
           <div class="img-wrapper">
@@ -65,7 +63,6 @@
             <img
               src="https://images.pexels.com/photos/3284167/pexels-photo-3284167.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
               tabindex="0"
-
             />
           </div>
 
@@ -74,7 +71,6 @@
               src="https://images.pexels.com/photos/5187131/pexels-photo-5187131.jpeg?cs=srgb&dl=pexels-brady-knoll-5187131.jpg&fm=jpg"
               alt="forest"
               tabindex="1"
-
             />
           </div>
         </div>
