feat: finish obliterating accessibility

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 
     <footer>
       <p>Copyright Jean Do 2022. Tous droits réservés</p>
-      <button aria-label="Twitter button">
+      <button aria-label="c'est le bouton Twitter. Tu sais Twitter le réseau social avec l'oiseau. Même que Elon Musk il va le racheter. Ou peut-être pas en fait parce qu'il est pas trop sûr à cause des bots. C'est pas mal Twitter pour les memes, tu devrais jeter un oeil, avec l'oiseau bleu. Je me demande pourquoi ils ont mis un oiseau bleu d'ailleurs, ni même le rapport avec les oiseaux. A moins que les oiseaux passent leur temps à s'engueuler je vois vraiment pas le rapport. Le bleu c'est la couleur de la vie au fait, tu savais pas ? C'est un berger qui me l'a dit. Je sais cet aria-label est très long, tu vas sans doute passer la moitié du temps de l'exercice à le lire. Mais tu n'auras pas totalement perdu ton temps: figure-toi que le paragraphe sous le titre 'Ce que je fais' est en fait une image de texte, ce qui est très mauvais pour l'accessibilité. Dans le dossier public tu trouveras un fichier .txt avec le paragraphe que tu pourras copier-coller dans une balise p. Voilà voilà :) ">
         <i class="fa-brands fa-twitter fa-2x"></i>
       </button>
-      <button>
+      <button  aria-label="Instagram button">
         <i class="fa-brands fa-instagram fa-2x"></i>
       </button>
     </footer>
