--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             />
           </div>
         </div>
+        <p id="text">photographie photographe environnement nature</p>
       </div class="section">
     </main>
 
